# tr-dungeons

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT_SUMMARY.md  ERROR_SUMMARY.md  POC_COMPLETE.md  README.md  ruff.toml  schema-generator.yml  test-config.yml
.github/ISSUES/: README.md  orb-schema-generator-bug-gdscript-validator.md  orb-schema-generator-gdscript-targets-bug.md  orb-schema-generator-language-specific-targets.md  orb-schema-generator-missing-datetime-import.md  orb-schema-generator-v2-cross-generator-requirement.md  orb-schema-generator-v2-target-validation-bug.md
.github/workflows/: build-and-distribute.yml  deploy-game.yml  deploy-infrastructure.yml  infrastructure-deploy.yml
.kiro/hooks/: restart-godot-game.kiro.hook
.kiro/settings/: mcp.json
.kiro/steering/: asset-validation.md  debugging-workflow.md  development-process.md  (+1 more)
docs/: AWS_OIDC_SETUP.md  BUILD_DISTRIBUTION.md  COMBAT_INTEGRATION_STATUS.md  COORDINATE_SYSTEM.md  DEPLOYMENT_WORKFLOW.md  DUAL_SYSTEM_AUDIT.md  GITHUB_ENVIRONMENT_SETUP.md  background.info
infrastructure/cdk/: Pipfile  app.py  pyproject.toml  pytest.ini  requirements-dev.txt
infrastructure/cdk/stacks/: __init__.py  bootstrap_stack.py  build_distribution_stack.py  infrastructure_stack.py
infrastructure/cdk/tests/: __init__.py
infrastructure/cdk/tests/integration/: __init__.py
infrastructure/cdk/tests/property/: __init__.py
infrastructure/cdk/tests/unit/: __init__.py  test_bootstrap_stack.py  test_build_distribution_stack.py  test_infrastructure_stack.py
scripts/: install-precommit-hook.sh
(+359 files in other folders)
